try to download json.gz instead of json #1731
Also
1)fixed some warning due to URL(String) deprecation.
2)provide error for emptyish archive files